# railtrack

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: index.html
src/: App.css  App.tsx  Preview.tsx  Stage.tsx  Timeline.tsx  backend.ts  cropMath.ts  index.css  projectFromUi.ts
src-tauri/: .gitignore  Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/engine/: buildFfmpeg.ts  ffmpeg.ts  interpolate.ts  project.ts
src/engine/__tests__/: engine.test.ts
